--- a/l10n/po/ja_JP/_guides/redis-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis-reference.adoc.po
@@ -3,55 +3,51 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-07 23:11+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/redis-reference.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Redis Reference Guide"
 msgstr "Redisリファレンスガイド"
 
 #. type: Title ==
 #: upstream/_guides/redis-reference.adoc:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "How to use custom Redis Commands"
 msgstr "Redisのカスタムコマンドの使い方"
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:17
-#, fuzzy
 msgid "As the list of commands which are supported out-of-box by both https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`] and https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`] depends on what is available in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`], then there might be case when you need a command which is not (yet) available via https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]."
-msgstr "の両方でサポートされているコマンドのリストは、以下の通りです。  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]と  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`]で利用可能なものに依存します。  link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]で利用可能なものに依存するため、場合によっては  link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]."
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]と  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`]の両方でサポートされているコマンドのリストは link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]で利用可能なものに依存するため、場合によっては link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] で利用できないコマンドが必要になる場合があります。"
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:20
-#, fuzzy
 msgid "In such case (if you don't want to wait for the new command to be supported in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]), you can implement it in either https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`] or https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`].  In order to do so, you will need:"
-msgstr "このような場合（新しいコマンドがサポートされるのを待ちたくない場合  link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]でサポートされるのを待ちたくない場合）は、次のいずれかで実装できます。  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]または  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`].そのためには、以下のものが必要となります。"
+msgstr "このような場合（新しいコマンドが link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]でサポートされるのを待ちたくない場合）は、 link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]または link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`] のいずれかで実装できます。 そのためには、以下のものが必要となります。"
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:22
-#, fuzzy
 msgid "Generate a new `Command` based on the nodejs code available in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] repository:"
-msgstr "で公開されているnodejsのコードに基づいて、新しい `Command` を生成します。  link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]リポジトリを使用しています。"
+msgstr "link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]リポジトリで公開されているnodejsのコードに基づいて、新しい `Command` を生成"
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:24
-#, fuzzy
 msgid "If you don't have a Redis service running locally, you can run Redis in a Docker container:"
 msgstr "Redisのサービスをローカルで実行していない場合は、DockerコンテナでRedisを実行することができます。"
 
@@ -63,9 +59,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:30
-#, fuzzy
 msgid "Next, while being in https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] root folder execute:"
-msgstr "次に、ルートフォルダにいる状態で  link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`]ルートフォルダを実行します。"
+msgstr "次に、link:https://github.com/vert-x3/vertx-redis-client[`vertx-redis-client`] ルートフォルダにいる状態で 次を実行します:"
 
 #. type: delimited block -
 #: upstream/_guides/redis-reference.adoc:36
@@ -78,9 +73,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:39
-#, fuzzy
 msgid "The above sequence of commands should update the https://github.com/vert-x3/vertx-redis-client/blob/master/src/main/java/io/vertx/redis/client/Command.java[`Command.java`] file, so it includes all the possible commands supported by a particular Redis version."
-msgstr "上記の一連のコマンドは、ファイル  link:https://github.com/vert-x3/vertx-redis-client/blob/master/src/main/java/io/vertx/redis/client/Command.java[`Command.java`]ファイルが更新され、特定のRedisバージョンでサポートされるすべてのコマンドが含まれるようになります。"
+msgstr "上記の一連のコマンドは、link:https://github.com/vert-x3/vertx-redis-client/blob/master/src/main/java/io/vertx/redis/client/Command.java[`Command.java`]ファイルを更新し、特定のRedisバージョンでサポートされるすべてのコマンドが含まれるようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/redis-reference.adoc:43
@@ -90,15 +84,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:47
-#, fuzzy
 msgid "This definition is very important as we will have to use it in the service.  Once we have this `Command` we can start to update the redis-client extension by:"
 msgstr "この定義は、サービスの中で使用する必要があるため、非常に重要です。この `Command` ができたら、redis-client extension を以下のように更新していきます。"
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:49
-#, fuzzy
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`] interface, i.e.:"
-msgstr "を更新します。  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]インターフェイス、つまり"
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/RedisClient.java[`RedisClient`]インターフェイスを更新、つまり"
 
 #. type: delimited block -
 #: upstream/_guides/redis-reference.adoc:53
@@ -108,9 +100,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:56
-#, fuzzy
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/RedisClientImpl.java[`RedisClientImpl`], i.e.:"
-msgstr "を更新します。  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/RedisClientImpl.java[`RedisClientImpl`]を、すなわち"
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/RedisClientImpl.java[`RedisClientImpl`]を更新、すなわち"
 
 #. type: delimited block -
 #: upstream/_guides/redis-reference.adoc:66
@@ -135,9 +126,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:72
-#, fuzzy
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`] interface, i.e.:"
-msgstr "を更新します。  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`]インターフェイス、つまり"
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/reactive/ReactiveRedisClient.java[`ReactiveRedisClient`]インターフェイスを更新、つまり"
 
 #. type: delimited block -
 #: upstream/_guides/redis-reference.adoc:76
@@ -153,9 +143,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:81
-#, fuzzy
 msgid "Updating the https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/ReactiveRedisClientImpl.java[`ReactiveRedisClientImpl`], i.e.:"
-msgstr "を更新します。  link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/ReactiveRedisClientImpl.java[`ReactiveRedisClientImpl`]を、すなわち"
+msgstr "link:https://github.com/quarkusio/quarkus/blob/main/extensions/redis-client/runtime/src/main/java/io/quarkus/redis/client/runtime/ReactiveRedisClientImpl.java[`ReactiveRedisClientImpl`]を更新、すなわち"
 
 #. type: delimited block -
 #: upstream/_guides/redis-reference.adoc:91
@@ -190,6 +179,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/redis-reference.adoc:101
-#, fuzzy
 msgid "Please note that it's using the `MutinyRedis` class which does asynchronous calls to Redis."
-msgstr "Redisへの非同期呼び出しを行う `MutinyRedis` クラスを使用していることに注意してください。"
+msgstr "Redisへの非同期呼び出しを行う `MutinyRedis` クラスを使用していることに注目してください。"
