--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-12 02:46+0000\n"
+"POT-Creation-Date: 2022-05-16 02:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1081,7 +1081,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:550
-msgid "You will need to apply the `io.quarkus.extension` plugin in the `runtime` module of your extension project.  The plugin includes the `extensionDescriptor` task that will generate `META-INF/quarkus-extension.properties` and `META-INF/quarkus-extension.yml` files.  The plugin also enables the `io.quarkus:quarkus-extension-processor` annotation processor in both `deployment` and `runtime` modules.  The name of the deployment module can be configured in the plugin by setting the `deploymentArtifact` property. The property is set to `deployment` by default:"
+#, fuzzy
+#| msgid "You will need to apply the `io.quarkus.extension` plugin in the `runtime` module of your extension project.  The plugin includes the `extensionDescriptor` task that will generate `META-INF/quarkus-extension.properties` and `META-INF/quarkus-extension.yml` files.  The plugin also enables the `io.quarkus:quarkus-extension-processor` annotation processor in both `deployment` and `runtime` modules.  The name of the deployment module can be configured in the plugin by setting the `deploymentArtifact` property. The property is set to `deployment` by default:"
+msgid "You will need to apply the `io.quarkus.extension` plugin in the `runtime` module of your extension project.  The plugin includes the `extensionDescriptor` task that will generate `META-INF/quarkus-extension.properties` and `META-INF/quarkus-extension.yml` files.  The plugin also enables the `io.quarkus:quarkus-extension-processor` annotation processor in both `deployment` and `runtime` modules.  The name of the deployment module can be configured in the plugin by setting the `deploymentModule` property. The property is set to `deployment` by default:"
 msgstr "エクステンションプロジェクトの `runtime` モジュールに `io.quarkus.extension` プラグインを適用する必要があります。このプラグインには、 `META-INF/quarkus-extension.properties` と `META-INF/quarkus-extension.yml` のファイルを生成する `extensionDescriptor` タスクが含まれています。また、このプラグインは `deployment` と `runtime` の両方のモジュールで `io.quarkus:quarkus-extension-processor` アノテーションプロセッサを有効にします。デプロイメントモジュールの名前は、プラグインで `deploymentArtifact` プロパティを設定することで設定できます。このプロパティは、デフォルトでは `deployment` に設定されています。"
 
 #. type: delimited block -
@@ -1099,7 +1101,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "quarkusExtension {\n"
-"    deploymentArtifact = 'deployment'\n"
+"    deploymentModule = 'deployment'\n"
 "}\n"
 msgstr ""
 
