--- a/l10n/po/ja_JP/_posts/2022-05-13-quarkus-newsletter-20.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-05-13-quarkus-newsletter-20.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-05-12 20:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-05-19 11:54+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: author
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:1
@@ -24,7 +24,7 @@ msgstr "jcobb"
 
 #. type: YAML Front Matter: date
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2022-05-12"
 msgstr "2022-05-12"
 
@@ -48,33 +48,29 @@ msgstr "newsletter"
 
 #. type: YAML Front Matter: title
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus Newsletter #20 - May"
 msgstr "Quarkus Newsletter #20 - May"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:13
-#, fuzzy
 msgid "The May newsletter is out!"
-msgstr "5月号ニュースレターを発行しました"
+msgstr "5月号ニュースレターを発行しました!"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:15
-#, fuzzy
 msgid "Read the great article \"Native Java in the Real World\" describing how Microservices on Kubernetes are the business case sweet spot for native Java because they have the most significant framework and Java runtime overhead. As well as How to use Camel extensions for Quarkus to build powerful Java Integrations. There is a cool short step-by-step guide to create a new microservice in \"Reactive Timer Microservice with Java Quartz, DynamoDB and Quarkus\". Get the baseline knowledge and understanding Reactive Messaging with Apache Kafka with \"Getting Started to Quarkus Reactive Messaging with Apache Kafka\". \"Process Formula 1 telemetry with Quarkus and OpenShift Streams for Apache Kafka\" is a great article showing how race team engineers can exploit multiple software technologies to process telemetry data in a Java application in real time. Follow up with \"3 Reasons Why All Java Developers Should Consider Quarkus\"."
-msgstr "Kubernetes上のマイクロサービスは、フレームワークとJavaランタイムのオーバーヘッドが最も大きいため、ネイティブJavaのビジネスケースのスイートスポットであることが説明されている素晴らしい記事「Native Java in the Real World」をお読みください。また、Quarkus用のCamel拡張機能を使用して、強力なJava統合を構築する方法についても説明しています。また、「Reactive Timer Microservice with Java Quartz, DynamoDB and Quarkus」では、新しいマイクロサービスを作成するための簡単なステップバイステップガイドが用意されています。また、「Getting Started to Quarkus Reactive Messaging with Apache Kafka」では、Apache Kafkaを使用したReactive Messagingの基本的な知識と理解を得ることができます。\"Process Formula 1 telemetry with Quarkus and OpenShift Streams for Apache Kafka \"は、レースチームのエンジニアが複数のソフトウェア技術を活用して、Javaアプリケーションで遠隔測定データをリアルタイムに処理する方法を紹介する優れた記事です。すべてのJava開発者がQuarkusを検討すべき3つの理由」をフォローアップしています。"
+msgstr "Kubernetes上のマイクロサービスは、フレームワークとJavaランタイムのオーバーヘッドが最も大きいため、ネイティブJavaのビジネスケースのスイートスポットであることが説明されている素晴らしい記事 \"Native Java in the Real World\"をお読みください。また、Quarkus用のCamelエクステンションを使用して、強力なJava統合を構築する方法についても説明しています。また、\"Reactive Timer Microservice with Java Quartz, DynamoDB and Quarkus\"では、新しいマイクロサービスを作成するための簡単なステップバイステップガイドが用意されています。また、\"Getting Started to Quarkus Reactive Messaging with Apache Kafka\"では、Apache Kafkaを使用したReactive Messagingの基本的な知識と理解を得ることができます。\"Process Formula 1 telemetry with Quarkus and OpenShift Streams for Apache Kafka\" は、レースチームのエンジニアが複数のソフトウェア技術を活用して、Javaアプリケーションで遠隔測定データをリアルタイムに処理する方法を紹介する優れた記事です。\"すべてのJava開発者がQuarkusを検討すべき3つの理由\" をフォローアップしています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:17
-#, fuzzy
 msgid "You will also see the lastest Quarkus Insights episodes, top tweets and upcoming Quarkus attended events."
-msgstr "また、最新のQuarkus Insightsエピソード、トップツイート、Quarkusが参加する今後のイベントも表示されます。"
+msgstr "また、最新のQuarkus Insightsエピソード、トップツイート、Quarkusが参加する今後のイベントも載っています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:19
-#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/20/[Newsletter #20]!"
-msgstr "link:https://quarkus.io/newsletter/20/[ニュースレター20号を] ご覧ください。"
+msgstr "link:https://quarkus.io/newsletter/20/[Newsletter #20] をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-05-13-quarkus-newsletter-20.adoc:21
