--- a/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-services.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-05-06 02:42+0000\n"
+"POT-Creation-Date: 2022-05-20 02:47+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -80,7 +80,9 @@ msgstr "データベース"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-services.adoc:48
-msgid "The database Dev Services will be enabled when a reactive or JDBC datasource extension is present in the application, and the database URL has not been configured. More information can be found at the xref:datasource.adoc#dev-services[Datasource Guide]."
+#, fuzzy
+#| msgid "The database Dev Services will be enabled when a reactive or JDBC datasource extension is present in the application, and the database URL has not been configured. More information can be found at the xref:datasource.adoc#dev-services[Datasource Guide]."
+msgid "The database Dev Services will be enabled when a reactive or JDBC datasource extension is present in the application, and the database URL has not been configured. More information can be found at the xref:databases-dev-services.adoc[Databases Dev Services Guide]."
 msgstr "データベース Dev Services は、アプリケーションにリアクティブ・データソースまたは JDBC データソース拡張が存在し、データベースの URL が構成されていない場合に有効になります。詳細については、 link:datasource.html#dev-services[データソース・ガイド]を参照してください。"
 
 #. type: Plain text
